Fixing Alignment

--- a/css/style.css
+++ b/css/style.css
@@ -57,11 +57,12 @@ body {
 
 .chat-section {
   overflow: auto;
-  padding: 0 10px;
-  background-color: #fff;
+  padding: 10px 10px;
+  /* background-color: #fff; */
   position: relative;
-  margin-top: 10px;
+  margin-top: 0px;
   transition: all 0.5ms ease-in-out;
+
   flex: 1;
 }
 
@@ -195,6 +196,9 @@ i {
   margin: 0 !important;
   background-color: transparent !important;
   box-shadow: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .fa-image {
